...
    <string name="uniconnect">UniConnect</string>
    <string name="imp_news">Important News</string>
    <string name="time_table">Time Table</string>
    <string name="news">News</string>
    <string name="catalog">Catalog</string>
    <string name="resetPsswd">Forgot Password?</string>
    <string name="addNews">Add</string>\
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="signup">Sign Up\n</string>
    <string name="teacher">Teacher</string>
...
