<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9EC3E1">

    <LinearLayout
        android:id="@+id/addNewsDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="News Title"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="News Content"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            android:inputType="textMultiLine"
            android:minHeight="48dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>