...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/addNewsButton"
                android:layout_width="120dp"
                android:layout_height="54dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_edittext"
                android:backgroundTint="#004174"
...
